fix layout shift

--- a/www/static/main.css
+++ b/www/static/main.css
@@ -72,6 +72,7 @@ body {
   margin-top: 1rem;
   padding: 0 1.25rem;
   width: 100%;
+  height: 2.25rem;
 }
 
 .DocSearch-Button {
